sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  
  var nbVal = getNombreValeurs()
  var ecart = nbVal
  
  var sorted =false
  
  while((ecart>1)||(!sorted)){
    sorted=true
    if(ecart>1){
      ecart = (ecart.toDouble / 1.3).toInt
      i=0
      while(i+ecart<nbVal){
        if(plusPetit(i,i+ecart)){
          echange(i,i+ecart)
          sorted=false
        }
        i+=1
      }
    }
	}
  
}